# cmake-uwp-custom-manifest

./: CMakeLists.txt  Package.appxmanifest.in  main.cpp
.github/workflows/: workflow.yaml
